istio-security/tls/egress/whitelist-egress-googleapis.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-googleapis
spec:
  hosts:
  - "169.254.169.254" # GCE metadata server
  - "metadata.google" # GCE metadata server
  - "metadata.google.internal" # GCE metadata server
  - "accounts.google.com" # Used to get token
  - "*.googleapis.com"
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: http
    name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whitelist-egress-googleapis
spec:
  hosts:
    - "169.254.169.254" # GCE metadata server
    - "metadata.google" # GCE metadata server
    - "metadata.google.internal" # GCE metadata server
    - "accounts.google.com" # Used to get token
    - "*.googleapis.com"
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: www.ecb.europa.eu
            port:
              number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whitelist-egress-googleapis-metadata169
spec:
  host: "169.254.169.254" # GCE metadata server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing google hosts
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whitelist-egress-googleapis-metadatagoogle
spec:
  host: "metadata.google" # GCE metadata server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing google hosts
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whitelist-egress-googleapis-metadatagoogleinternal
spec:
  host: "metadata.google.internal" # GCE metadata server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing google hosts
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whitelist-egress-googleapis-accounts-google
spec:
  host: "accounts.google.com" # Used to get token
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing google hosts
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whitelist-egress-googleapis-stargoogleapis
spec:
  host: "*.googleapis.com"
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing google hosts
