istio-security/tls/egress/whitelist-egress-redis.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: redis-internal
spec:
  hosts:
  - redis-cart.default.svc.cluster.local
  ports:
  - number: 6379
    name: redis
    protocol: https
  resolution: DNS
  location: MESH_INTERNAL
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: redis-internal
#spec:
#  hosts:
#    - redis-cart.default.svc.cluster.local
#  tcp:
#    - match:
#        - port: 6379
#      route:
#        - destination:
#            host: redis-cart.default.svc.cluster.local
#            port:
#              number: 6379
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: redis-internal
#spec:
#  host: redis-cart
#  trafficPolicy:
#    loadBalancer:
#      simple: ROUND_ROBIN
#    portLevelSettings:
#      - port:
#          number: 443
#        tls:
#          mode: SIMPLE # initiates HTTPS when accessing www.ecb.europa.eu
